crates/solidity/testing/snapshots/bindings_output/yul/slot_of_public_var_override/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[ input.sol:2:25 ]
   │
 2 │     function x() public view virtual returns (uint) {}
   │                         ───────────────┬───────────────  
   │                                        ╰───────────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:6:26 ]
   │
 6 │     uint public override x;
   │                          ┬  
   │                          ╰── Error occurred here.
───╯
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[ input.sol:8:5 ]
    │
  8 │ ╭─▶     function test() internal pure {
    ┆ ┆   
 12 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Base {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function x() public view virtual returns (uint) {}
   │              ┬  
   │              ╰── name: 2
   │ 
 5 │ contract Test is Base {
   │          ──┬─  
   │            ╰─── name: 3
 6 │     uint public override x;
   │                 ────┬───  
   │                     ╰───── name: 4
   │
   ├─[ input.sol:1:1 ]
   │
 5 │ contract Test is Base {
   │                  ──┬─  
   │                    ╰─── ref: 1
───╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Base {
    ┆ ┆   
  3 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         function x() public view virtual returns (uint) {}
    │     ───────────┬───────────  
    │                ╰───────────── definiens: 2
    │ 
  4 │ ╭─▶ 
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  6 │     uint public override x;
    │ ──────────────┬─────────────  
    │               ╰─────────────── definiens: 4
────╯
